2009-07-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

        * job.c (construct_command_argv_internal): Add "ulimit" and
        "unset" to the sh_cmds for Unixy shells.

2009-07-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

        * configure.in: Move side-effects outside AC_CACHE_VAL arguments
        that set make_cv_sys_gnu_glob, so they are also correctly set
        when the cache has been populated before.

2009-07-04  Eli Zaretskii  <eliz@gnu.org>

	* function.c (func_realpath) [!HAVE_REALPATH]: Require the file to
	exist, as realpath(3) does where it's supported.

2006-07-04  Eli Zaretskii  <eliz@gnu.org>

	* function.c (IS_ABSOLUTE, ROOT_LEN): New macros.
	(abspath): Support systems that define HAVE_DOS_PATHS (have
	drive letters in their file names).  Use IS_PATHSEP instead of a
	literal '/' comparison.  Fixes Savannah bug #26886.

2009-06-14  Paul Smith  <psmith@gnu.org>

	* remake.c (update_file_1): Remember the original file we marked
	as updating, so we can clear that flag again.  If we find a target
	via vpath, FILE might change.
	(check_dep): Ditto.  Fixes Savannah bug #13529.
	Patch by Reid Madsen <reid.madsen@tek.com>.

2009-06-13  Paul Smith  <psmith@gnu.org>

	* doc/make.texi (MAKEFILES Variable): Be explicit that files
	included by MAKEFILES cannot give default goals.
	* read.c (eval): If set_default is not set, pass the no-default-goal
	value when we read included makefiles.  Fixes Savannah bug #13401.

	* ar.c (ar_name): Ensure that targets with empty parens aren't
	considered archive member references: archive members must have a
	non-empty "member" string.  Fixes Savannah bug #18435.

	* function.c (string_glob): Rely on multi_glob() to determine
	whether files exist or not.  Remove call to file_exists_p() which
	is not always correct.  Fixes Savannah bug #21231.
	* read.c (multi_glob): Add a new argument EXISTS_ONLY; if true
	then only files that really exist will be returned.
	* dep.h: Add new argument to multi_glob().